--- a/front/package.json
+++ b/front/package.json
@@ -18,15 +18,22 @@
   },
   "homepage": "https://github.com/devCoderian/picture-diary#readme",
   "dependencies": {
+    "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "dayjs": "^1.10.7",
+    "immer": "^9.0.7",
     "next": "^9.5.5",
+    "next-redux-wrapper": "^6.0.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-bootstrap-icons": "^1.6.1",
     "react-datepicker": "^4.3.0",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
