--- a/front/package.json
+++ b/front/package.json
@@ -30,6 +30,7 @@
     "react-bootstrap-icons": "^1.6.1",
     "react-datepicker": "^4.3.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
